--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </title>  
 </head>
  
-<body> background="2.PNG
+<body> 
  <b color: white>Писать по поводу размещения ссылки: 
  Telegram @maxim270409</b>
 <hr>
