--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 
 <head>
- background= 2.PNG
  <meta charset= "UTF-8"/>
  <link rel = "stylesheet" href = "css/my.css">
 <title>
@@ -10,7 +9,7 @@
   </title>  
 </head>
  
-<body> 
+<body  background= "2.PNG"
  <b color: white>Писать по поводу размещения ссылки: 
  Telegram @maxim270409</b>
 <hr>
