--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   </title>  
 </head>
  
-<body  background= "2.PNG"
+<body>
+      background= "2.PNG"
  <b color: white>Писать по поводу размещения ссылки: 
  Telegram @maxim270409</b>
 <hr>
