--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
 
 <head>
  <meta charset= "UTF-8"/>
- <link rel = "stylesheet" href = "css/my.css">
 <title>
   зяблик
   </title>  
 </head>
- 
+  
 <body>
+ <style>
+.example-2 {
+    color: white;   
+}
+</style>
+
+ 
       background= "2.PNG"
  <b color: white>Писать по поводу размещения ссылки: 
  Telegram @maxim270409</b>
