--- a/index.html
+++ b/index.html
@@ -8,17 +8,13 @@
   </title>  
 </head>
   
-<body>
- <style>
-.example-2 {
-    color: white;   
-}
-</style>
-
+<body> 
+ background= "2.PNG"
  
-      background= "2.PNG"
- <b color: white>Писать по поводу размещения ссылки: 
- Telegram @maxim270409</b>
+
+
+ <b white>Писать по поводу размещения ссылки: 
+ Telegram @maxim270409</b white>
 <hr>
 <a href="https://www.avalon1.site/?ref=sanfgroup&gclid=Cj0KCQjwnJaKBhDgARIsAHmvz6cVfbaqJPoZeWN0isB_7h4HOT6t7kZ2YIxnOjyJYrqz4eH_XaRfEa8aAtuLEALw_wcB"> <h2> 1) ссылка </h2> </a>
 </body>
