--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   </title>  
 </head>
   
-<body> 
+<body 
  background= "2.PNG"
  
 
 
- <b white>Писать по поводу размещения ссылки: 
+ <b>Писать по поводу размещения ссылки: 
  Telegram @maxim270409</b white>
 <hr>
 <a href="https://www.avalon1.site/?ref=sanfgroup&gclid=Cj0KCQjwnJaKBhDgARIsAHmvz6cVfbaqJPoZeWN0isB_7h4HOT6t7kZ2YIxnOjyJYrqz4eH_XaRfEa8aAtuLEALw_wcB"> <h2> 1) ссылка </h2> </a>
