--- a/index.html
+++ b/index.html
@@ -11,12 +11,8 @@
 <body 
  background= "G.jpg"
  
-
-
- <b>Писать по поводу размещения ссылки: 
- Telegram @maxim270409</b white>
+<button><href=""a>Регистация</a></button>
 <hr>
-<a href="https://www.avalon1.site/?ref=sanfgroup&gclid=Cj0KCQjwnJaKBhDgARIsAHmvz6cVfbaqJPoZeWN0isB_7h4HOT6t7kZ2YIxnOjyJYrqz4eH_XaRfEa8aAtuLEALw_wcB"> <h2> 1) ссылка </h2> </a>
 </body>
 
 </html>
