--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   
 <body 
  background= "G.jpg"
- 
-<button><href=""a>Регистация</a></button>
+ <navi>
+<button><href="registr.html"a>Регистация</a></button>
+ </navi>
 <hr>
 </body>
 
