--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body 
  background= "G.jpg"
  <navi>
-<button><href="registr.html"a>Регистация</a></button>
+<a href="registr.html">Регистация</a>
  </navi>
 <hr>
 </body>
