--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body 
  background= "G.jpg"
  <navi>
-<a href="registr.html">Регистация</a>
+<a href="vigeos.html">просмотр видео</a>
  </navi>
 <hr>
 </body>
