--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body 
  background= "G.jpg"
  <nav>
-<a href="vigeos.html">просмотр видео</a>
+<a href="videos.html">просмотр видео</a>
  </nav>
 <hr>
 </body>
