--- a/videos.html
+++ b/videos.html
@@ -6,6 +6,9 @@
     <title>регистрация</title>
 </head>
 <body>
+     background= "G.jpg"
+    
+    
     <video src="IMG_4627.MOV" controls>test video for seablic</video>
 
 
