--- a/videos.html
+++ b/videos.html
@@ -3,14 +3,14 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>регистрация</title>
+    <title>ролики доступные для посмотра</title>
 </head>
 <body>
      background= "G.jpg"
     
     
     <video src="IMG_4627.MOV" controls>test video for seablic</video>
-
+<hr>
 
 
 
