--- a/videos.html
+++ b/videos.html
@@ -6,9 +6,9 @@
     <title>ролики доступные для посмотра</title>
 </head>
 <body>
-     background = "G.jpg"
     
-    
+    <iframe width="560" height="315" src="IMG_4627.MOV"></iframe>
+    I
     <video src="IMG_4627.MOV" controls>test video for seablic</video>
 <hr>
 
