--- a/videos.html
+++ b/videos.html
@@ -6,10 +6,8 @@
     <title>ролики доступные для посмотра</title>
 </head>
 <body>
-    
-    <iframe width="560" height="315" src="IMG_4627.MOV"></iframe>
-    I
-    <video src="IMG_4627.MOV" controls>test video for seablic</video>
+   
+    <video width="560" height="315" src="IMG_4627.MOV" controls>test video for seablic</video>
 <hr>
 
 
