--- a/videos.html
+++ b/videos.html
@@ -7,8 +7,14 @@
 </head>
 <body>
    
-    <video width="560" height="315" src="IMG_4627.MOV" controls>test video for seablic</video>
-<hr>
+    
+   <video width="560" height="315" src="IMG_4627.MOV" controls>test video for seablic</video>
+    <h1> это тестовое название</h1>
+<details>
+    <summary>Описание</summary>
+    <p>это тестовое описание  для видео </p>
+</details>
+    <hr>
 
 
 
