--- a/videos.html
+++ b/videos.html
@@ -6,6 +6,7 @@
     <title>ролики доступные для посмотра</title>
 </head>
 <body>
+    background ="IMG_0038.jpg"
     
    <video width="560" height="315" src="IMG_4627.MOV" controls>test video for seablic</video>
     <h1> это тестовое название</h1>
