--- a/videos.html
+++ b/videos.html
@@ -7,7 +7,7 @@
 </head>
 <body
       
- background="IMG_0038.jpg"
+ background="IMG_0038.jpg" >
     
    <video width="560" height="315" src="IMG_4627.MOV" controls>test video for seablic</video>
     <h1> это тестовое название</h1>
