--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+ <link rel="shortcut icon" href="2608DCC1-1888-439C-98F9-16ED2299C5E7.jpeg" type="image/x-icon">
  <meta charset= "UTF-8"/>
 <title>
   зяблик
