--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <a href="videos.html">просмотр видео</a>
  </nav>
 <hr>
+<h1> «Зяблик» - это бесплатная социальная сеть с 3-х минутными видеороликами с разными форматами , а именно вертикальные и горизонтальные! </h1>
 </body>
 
 </html>
