--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
  </nav>
 <hr>
 <h1> «Зяблик» - это бесплатная социальная сеть с 3-х минутными видеороликами с разными форматами , а именно вертикальные и горизонтальные! </h1>
+<details>
+    <summary>Для того что бы опубликовать видео нужно: </summary>
+    <p>отправить видео на почту: seablic_videos@mail.ru !
+ И не забывайте написать название для видео и описание тоже составить не забудьте !</p>
+</details>
 </body>
 
 </html>
