--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <a href="videos.html">просмотр видео</a>
  </nav>
 <hr>
-<h1> «Зяблик» - это бесплатная социальная сеть с 3-х минутными видеороликами с разными форматами , а именно вертикальные и горизонтальные! </h1>
+<h2> «Зяблик» - это бесплатная социальная сеть с 3-х минутными видеороликами с разными форматами , а именно вертикальные и горизонтальные! </h1>
 <details>
-    <summary>Для того что бы опубликовать видео нужно: </summary>
+ <h1>  <summary>Для того что бы опубликовать видео нужно: </summary> </h1>
     <h1><p>отправить видео на почту: seablic_videos@mail.ru !
-     И не забывайте написать название для видео и описание тоже составить не забудьте !</p> </h1>
+     И не забывайте написать название для видео и описание тоже составить не забудьте !</p> </h2>
 </details>
 </body>
 
