--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <hr>
 <h2> «Зяблик» - это бесплатная социальная сеть с 3-х минутными видеороликами с разными форматами , а именно вертикальные и горизонтальные! </h1>
 <details>
- <h1>  <summary>Для того что бы опубликовать видео нужно: </summary> </h1>
+   <summary><h1>Для того что бы опубликовать видео нужно: </h1> </summary> 
     <h1><p>отправить видео на почту: seablic_videos@mail.ru !
      И не забывайте написать название для видео и описание тоже составить не забудьте !</p> </h2>
 </details>
