--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head>
+<head> 
  <link rel="shortcut icon" href="2608DCC1-1888-439C-98F9-16ED2299C5E7.jpeg" type="image/x-icon">
  <meta charset= "UTF-8"/>
 <title>
@@ -12,7 +12,7 @@
 <body 
  background= "G.jpg"
  <nav>
-<a href="videos.html">просмотр видео</a>
+ <button><a href="videos.html">просмотр видео</a> </button>
  </nav>
 <hr>
 <h1> «Зяблик» - это бесплатная социальная сеть с 3-х минутными видеороликами с разными форматами , а именно вертикальные и горизонтальные! </h1>
