--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   
 <body 
  background= "G.jpg"
-      <img src="34E66FC2-1AE6-4D17-AC1D-EB811D2069E1.jpeg" alt="">
+      <img src="34E66FC2-1AE6-4D17-AC1D-EB811D2069E1.jpeg" width="100" alt="">
  <nav>
  <button><a href="videos.html">просмотр видео</a> </button>
  </nav>
