--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
     <h2><p>отправить видео на почту: seablic_videos@mail.ru !
      И не забывайте написать название для видео и описание тоже составить не забудьте !</p> </h2>
 </details>
-</body>
+<hr>
+ <h2>реклама</h2>
+<hr>
+ <a href="http://clicknpx.com/CLdC"><img src="" alt=""></a>
+
+ </body>
 
 </html>
 
