--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <hr>
  <h2>реклама</h2>
 <hr>
- <a href="http://clicknpx.com/CLdC"><img src="" alt=""></a>
+ <a href="http://clicknpx.com/CLdC"><img src="D5134229-B899-4DBB-8C08-16923470CAD8.jpeg" alt=""></a>
 
  </body>
 
