--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
  <h2>реклама</h2>
 <hr>
  <a href="http://clicknpx.com/CLdC"><img src="D5134229-B899-4DBB-8C08-16923470CAD8.jpeg" alt=""></a>
-<a href="http://clicknpx.com/CLdS"><img src="5670E3F6-1A71-4B4E-A4B7-D3E0C9159404.jpeg
-
-" alt=""></a>
+<a href="http://clicknpx.com/CLdS"><img src="5670E3F6-1A71-4B4E-A4B7-D3E0C9159404.jpeg" width="500" alt=""></a>
  </body>
 
 </html>
