--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  background= "G.jpg"
       <img src="34E66FC2-1AE6-4D17-AC1D-EB811D2069E1.jpeg" width="100" alt="">
  <nav>
- <button><a href="videos.html">просмотр видео</a> </button>
+ <button width="100"><a href="videos.html">просмотр видео</a> </button>
  </nav>
 <hr>
 <h1> «Зяблик» - это бесплатная социальная сеть с 3-х минутными видеороликами с разными форматами , а именно вертикальные и горизонтальные! </h1>
@@ -29,5 +29,5 @@
 <a href="http://clicknpx.com/CLdS"><img src="5670E3F6-1A71-4B4E-A4B7-D3E0C9159404.jpeg" width="500" alt=""></a>
  </body>
 
-</html>
+</html> 
 
