--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  background= "G.jpg"
       <img src="34E66FC2-1AE6-4D17-AC1D-EB811D2069E1.jpeg" width="100" alt="">
  <nav>
- <button src="Изображение PNG.png"><a href="videos.html">просмотр видео</a> </button>
+  <a href = "videos.html"><img src="Изображение PNG.png"></a>
  </nav>
 <hr>
 <h1> «Зяблик» - это бесплатная социальная сеть с 3-х минутными видеороликами с разными форматами , а именно вертикальные и горизонтальные! </h1>
