--- a/videos.html
+++ b/videos.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-
+<nav>
+    <img src="" ><a href="index.html"></a>
+    
+</nav>
+<hr>
 <html>
 <head>
     <meta charset="utf-8">
