--- a/videos.html
+++ b/videos.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <nav>
-    <img src="0D1638AB-D9CB-4246-8085-4C6DFFBF3BF1.png"><a href="index.html"></a>
+    <a href="index.html"><img src="0D1638AB-D9CB-4246-8085-4C6DFFBF3BF1.png"></a>
     
 </nav>
 <hr>
