--- a/videos.html
+++ b/videos.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <nav>
-    <a href="index.html"><img src="9D7EDBE4-3F4B-421C-9DFC-D4D01F05F274.png" width ="100" ></a>
+    <a href="index.html"><img src="3C9E2626-CE68-4475-A844-D7E885DD0F9F.jpeg" width ="100" ></a>
     
 </nav>
 <hr>
