--- a/index.html
+++ b/index.html
@@ -25,8 +25,18 @@
 <hr>
  <h2>реклама</h2>
 <hr>
- <a href="http://clicknpx.com/CLdC"><img src="D5134229-B899-4DBB-8C08-16923470CAD8.jpeg" alt=""></a>
-<a href="http://clicknpx.com/CLdS"><img src="5670E3F6-1A71-4B4E-A4B7-D3E0C9159404.jpeg" width="500" alt=""></a>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1070669690635394"
+     crossorigin="anonymous"></script>
+<!-- Max -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1070669690635394"
+     data-ad-slot="5116861665"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <hr>
  </body>
 
