--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
 </head>
   
 <body 
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1070669690635394"
+     crossorigin="anonymous"></script>
+<!-- Maxul side bar -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1070669690635394"
+     data-ad-slot="7095130077"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
  background= "G.jpg"
       <img src="34E66FC2-1AE6-4D17-AC1D-EB811D2069E1.jpeg" width="100" alt="">
  <nav>
