--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   </title>  
 </head>
   
-<body 
-      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1070669690635394"
+<body
+ background= "G.jpg">
+      <img src="34E66FC2-1AE6-4D17-AC1D-EB811D2069E1.jpeg" width="100" alt="">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1070669690635394"
      crossorigin="anonymous"></script>
 <!-- Maxul side bar -->
 <ins class="adsbygoogle"
@@ -22,8 +24,6 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
- background= "G.jpg"
-      <img src="34E66FC2-1AE6-4D17-AC1D-EB811D2069E1.jpeg" width="100" alt="">
  <nav>
   <a href = "videos.html"><img src="Изображение PNG.png" width= "100"></a>
  </nav>
