--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   </title>  
 </head>
   
-<body
- background= "G.jpg">
+<body>
  <nav>
   <a href = "videos.html"><img src="Изображение PNG.png" width= "100"></a>
  </nav>
@@ -23,7 +22,7 @@
 </details>
 <hr>
  <h2>реклама</h2>
-<hr>
+
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1070669690635394"
      crossorigin="anonymous"></script>
 <!-- Max -->
@@ -36,7 +35,7 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-<hr>
+
  </body>
 
 </html> 
