--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   </title>  
 </head>
   
-<body>
+<body
+      background="">
  <nav>
   <a href = "videos.html"><img src="Изображение PNG.png" width= "100"></a>
  </nav>
