--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
   
 <body
-      background="">
+      background="G.jpg">
  <nav>
   <a href = "videos.html"><img src="Изображение PNG.png" width= "100"></a>
  </nav>
