--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 
 <head> 
- <meta name="verify-admitad" content="a4664b0b22" />
- <link rel="shortcut icon" href="2608DCC1-1888-439C-98F9-16ED2299C5E7.jpeg" type="image/x-icon">
+<meta name="surfe.pro" content="af1f4424e635dfa1a4a8bb0e8312df2a">
  <meta charset= "UTF-8"/>
 <title>
   зяблик
